force-app/main/default/objects/Animal360_Domain_Definition__mdt/Animal360_Domain_Definition__mdt.object-meta.xml
<CustomObject>
    <description
  >Packaged Five Domains catalogue used to seed runtime templates and reporting semantics.</description>
    <label>Animal360 Domain Definition</label>
    <pluralLabel>Animal360 Domain Definitions</pluralLabel>
</CustomObject>