force-app/main/default/objects/Animal360_Domain_Definition__mdt/fields/Display_Order__c.field-meta.xml
<CustomField>
    <fullName>Display_Order__c</fullName>
    <description>Runtime order for presenting domains.</description>
    <label>Display Order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>