force-app/main/default/objects/Animal360_Domain_Definition__mdt/fields/Domain_Code__c.field-meta.xml
<CustomField>
    <fullName>Domain_Code__c</fullName>
    <description>Stable domain code used across templates.</description>
    <label>Domain Code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>