force-app/main/default/objects/Animal360_Domain_Definition__mdt/fields/Domain_Label__c.field-meta.xml
<CustomField>
    <fullName>Domain_Label__c</fullName>
    <description>User-facing domain label.</description>
    <label>Domain Label</label>
    <length>80</length>
    <type>Text</type>
</CustomField>