force-app/main/default/objects/Animal360_Domain_Definition__mdt/fields/Guidance_Text__c.field-meta.xml
<CustomField>
    <fullName>Guidance_Text__c</fullName>
    <description
  >Packaged guidance shown when the domain is presented at runtime.</description>
    <label>Guidance Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>