force-app/main/default/objects/Animal360_Domain_Definition__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <description
  >Enables the domain for seeding and runtime selection.</description>
    <label>Is Active</label>
    <defaultValue>true</defaultValue>
    <type>Checkbox</type>
</CustomField>