force-app/main/default/objects/Animal360_Domain_Definition__mdt/fields/Is_Mental_State_Domain__c.field-meta.xml
<CustomField>
    <fullName>Is_Mental_State_Domain__c</fullName>
    <description
  >Marks the domain used for Domain 5 mental-state summary handling.</description>
    <label>Is Mental State Domain</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>